--- a/Copy_of_Sample_EDA_Submission_Template.ipynb
+++ b/Copy_of_Sample_EDA_Submission_Template.ipynb
@@ -6,18 +6,12 @@
       "provenance": [],
       "collapsed_sections": [
         "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
         "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
         "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
         "H0kj-8xxnORC",
         "nA9Y7ga8ng1Z",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
         "0wOQAZs5pc--",
         "KSlN3yHqYklG",
         "EM7whBJCYoAo",
@@ -32,7 +26,9 @@
         "n3dbpmDWp1ck",
         "Ag9LCva-p1cl",
         "NC_X3p0fY2L0",
-        "q29F0dvdveiT"
+        "q29F0dvdveiT",
+        "JcMwzZxoAimU",
+        "gCX9965dhzqZ"
       ],
       "include_colab_link": true
     },
@@ -120,7 +116,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/swaroopsamantaray18/Paisabazaar-Banking-Fraud-Analysis.git"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
